@@ -2,24 +2,23 @@ package ar.edu.utn.frba.dds.controllers.canjeDePuntos;
 
 import ar.edu.utn.frba.dds.dtos.RedirectDTO;
 import ar.edu.utn.frba.dds.dtos.colaboraciones.ProductoDTO;
+import ar.edu.utn.frba.dds.exceptions.ResourceNotFoundException;
+import ar.edu.utn.frba.dds.models.entities.canjeDePuntos.CanjeDePuntos;
 import ar.edu.utn.frba.dds.models.entities.colaboracion.OfertaDeProductos;
 import ar.edu.utn.frba.dds.models.entities.colaborador.Colaborador;
-import ar.edu.utn.frba.dds.models.entities.puntosPorColaborador.CanjeDePuntos;
 import ar.edu.utn.frba.dds.services.canjeDePuntos.CanjeDePuntosService;
 import ar.edu.utn.frba.dds.services.colaboraciones.OfertaProductosServiciosService;
 import ar.edu.utn.frba.dds.services.colaborador.ColaboradorService;
 import ar.edu.utn.frba.dds.services.usuario.UsuarioService;
-import ar.edu.utn.frba.dds.utils.ColaboradorPorSession;
-import ar.edu.utn.frba.dds.utils.ICrudViewsHandler;
+import ar.edu.utn.frba.dds.utils.UserRequired;
 import io.javalin.http.Context;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-public class CanjeDePuntosController extends ColaboradorPorSession implements ICrudViewsHandler {
+public class CanjeDePuntosController extends UserRequired {
     private final CanjeDePuntosService canjeDePuntosService;
     private final OfertaProductosServiciosService ofertaProductosServiciosService;
 
@@ -29,82 +28,60 @@ public class CanjeDePuntosController extends ColaboradorPorSession implements IC
         this.ofertaProductosServiciosService = ofertaProductosServiciosService;
     }
 
-    @Override
     public void index(Context context) {
-
     }
 
-    @Override
     public void show(Context context) {
-
     }
 
-    @Override
     public void create(Context context) {
-        List<OfertaDeProductos> productos = this.ofertaProductosServiciosService.buscarTodos();
+        Colaborador colaborador = colaboradorFromSession(context);
+        double puntaje = this.canjeDePuntosService.getPuntosDeColaborador(colaborador);
 
+        List<OfertaDeProductos> productos = this.ofertaProductosServiciosService.buscarTodos();
         List<ProductoDTO> productosDTOS = productos.stream()
                 .map(ProductoDTO::preview)
-                .collect(Collectors.toList());
-
-
-        Colaborador colaborador = this.obtenerColaboradorPorSession(context);
-
-        Double puntaje = this.canjeDePuntosService.calcularPuntos(colaborador);
+                .toList();
 
         Map<String, Object> model = new HashMap<>();
-        model.put("productos-canjear", productosDTOS);
-        model.put("titulo", "Listado de productos/servicios");
+        model.put("productos", productosDTOS);
         model.put("puntaje", puntaje);
 
-        context.render("canje_de_puntos/productos_canjear.hbs");
+        render(context, "canje_de_puntos/canje_puntos_crear.hbs", model);
     }
 
-    @Override
     public void save(Context context) {
         Map<String, Object> model = new HashMap<>();
         List<RedirectDTO> redirectDTOS = new ArrayList<>();
         boolean operationSuccess = false;
 
         try {
-            //TODO - refactor extends colaboradorPorSession
+            Colaborador colaborador = colaboradorFromSession(context);
+            double puntaje = this.canjeDePuntosService.getPuntosDeColaborador(colaborador);
 
-            Colaborador colaboradorCanje = this.obtenerColaboradorPorSession(context);
+            String ofertaId = context.queryParam("oferta");
+            OfertaDeProductos oferta = ofertaProductosServiciosService.buscarPorId(ofertaId)
+                    .orElseThrow(ResourceNotFoundException::new);
 
-            Double puntosCanjeados = Double.valueOf(context.formParam("puntos_canjeados"));
 
-            //TODO creo que no llega como parametro sino que calcula con el futuro service
-            Double puntosRestantes = Double.valueOf(context.formParam("puntos_restantes"));
-            puntosRestantes = 3.14159;
+            double puntosRestantes = puntaje - oferta.getPuntosNecesarios();
+            if (puntosRestantes < 0) {
+                System.out.println("puntos insuficientes");
+                throw new Exception();
+            }
 
-            OfertaDeProductos oferta = this.ofertaProductosServiciosService.buscarPorId(context.formParam("oferta_id")).get();
-            CanjeDePuntos canjeDePuntosNuevo = CanjeDePuntos.por(colaboradorCanje, LocalDateTime.now(), puntosCanjeados, puntosRestantes, oferta);
-
-            this.canjeDePuntosService.guardar(canjeDePuntosNuevo);
+            CanjeDePuntos canjeDePuntosNuevo = CanjeDePuntos.por(colaborador, oferta, LocalDateTime.now(), oferta.getPuntosNecesarios(), puntosRestantes);
+            this.canjeDePuntosService.registrar(canjeDePuntosNuevo);
 
             operationSuccess = true;
-            redirectDTOS.add(new RedirectDTO("/canjes-puntos", "Ver Productos"));
-            /*no se si deberia ir una excepcion*/
+            redirectDTOS.add(new RedirectDTO("/canje-de-puntos/new", "Ver Productos"));
+        } catch (Exception e) {
+            redirectDTOS.add(new RedirectDTO("/canje-de-puntos/new", "Reintentar"));
         } finally {
             model.put("success", operationSuccess);
             model.put("redirects", redirectDTOS);
             context.render("post_result.hbs", model);
         }
-    }
-
-    @Override
-    public void edit(Context context) {
-
-    }
-
-    @Override
-    public void update(Context context) {
-
-    }
-
-    @Override
-    public void delete(Context context) {
-
     }
 
 }
